<resources>
    <string name="app_name">DrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="prof">rol</string>
    <string name="uid_usuario">Id de Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Mi cuenta</string>
    <string name="category">Trabajadores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">Nuevos Servicios</string>
    <string name="my_orders">Tipo de Pago</string>
    <string name="my_carts">------------</string>
    <string name="closed">Cerrar Sesion</string>

</resources>