<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/profile" />

<!--        <item-->
<!--            android:id="@+id/nav_my_carts"-->
<!--            android:icon="@drawable/ic_launcher_whatsapp_background"-->
<!--            android:title="@string/category" />-->


        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="Trabajadores" />

        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_baseline_autorenew_24"
            android:title="@string/new_products" />

        <item
            android:id="@+id/guardadoFragment"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="Guardado" />
     <item
          android:id="@+id/nav_my_orders"
          android:icon="@drawable/ic_baseline_attach_money_24"
          android:title="Pasarela de Pago" />

<!--        <item-->
<!--            android:id="@+id/nav_cerrarsesion"-->
<!--            android:icon="@drawable/ic_baseline_login_24"-->
<!--            android:title="@string/closed" />-->

    </group>
</menu>