<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="188dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <RelativeLayout
        android:layout_marginLeft="-16dp"
        android:layout_marginBottom="-15dp"
        android:layout_width="411dp"
        android:layout_height="188dp">


        <ImageView
            android:id="@+id/portada_img"
            android:layout_width="404dp"
            android:layout_height="174dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="-27dp"
            android:layout_marginLeft="-27dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp" />

        <TextView
            android:id="@+id/nav_header_email"
            android:layout_width="214dp"
            android:layout_height="37dp"
            android:layout_alignEnd="@+id/portada_img"
            android:layout_alignRight="@+id/portada_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="165dp"
            android:layout_marginRight="165dp"
            android:text="@string/nav_header_subtitle" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignEnd="@+id/portada_img"
            android:layout_alignRight="@+id/portada_img"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="274dp"
            android:layout_marginRight="274dp"
            android:layout_marginBottom="74dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/portada_img"
            android:layout_alignRight="@+id/portada_img"
            android:layout_alignBottom="@+id/portada_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginEnd="180dp"
            android:layout_marginRight="180dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/nav_header_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/portada_img"
            android:layout_alignRight="@+id/portada_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:text="@string/uid_usuario" />

        <TextView
            android:id="@+id/nav_roldeusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="171dp"
            android:layout_marginRight="171dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/prof"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </RelativeLayout>

    </LinearLayout>